fix overflow problems

--- a/client/src/components/Project.module.css
+++ b/client/src/components/Project.module.css
@@ -6,7 +6,7 @@
     padding: 5px;
 }
 
-@media (max-width: 575.98px) {
+@media (max-width: 800px) {
     .img {
         height: 20em;
         width: 20em;
