--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,12 +4,14 @@ html {
     padding: 0;
     background-color: rgb(255, 255, 255);
     font-family: Roboto, sans-serif;
+    overflow-x:hidden;
 }
 
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x:hidden;
 }
 
 .cstm-primary {
